--- a/szakdolgozat-nyilvantarto/src/main/resources/application.properties
+++ b/szakdolgozat-nyilvantarto/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 # H2 Console engedélyezése (fejlesztés során)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#Fájl méret limit
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
